# event-fanout-service

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.do/: app.yaml
.github/workflows/: ci.yml
app/: main.py
app/api/: deliveries.py  events.py  subscriptions.py
app/core/: config.py  logging.py  middleware.py
app/db/: engine.py  models.py
app/models/: schemas.py
app/repositories/: deliveries.py  events.py  subscriptions.py
app/services/: delivery_worker.py  ingestion.py  matching.py  subscriptions.py
tests/: conftest.py  test_deliveries_api.py  test_events.py  test_fanout.py  test_health.py  test_matching.py  test_subscriptions.py
